--- a/signals/TextEditor/index.html
+++ b/signals/TextEditor/index.html
@@ -2,4 +2,5 @@
 <a href="../../index.html"><p style="text-align:right">Back to Index</p></a>
 <h3>Log:</h3>
 <div id="log"></div>
+<script type="text/javascript" src="../../scripts/logger.js"></script>
 <script type="text/javascript" src="code.js"></script>
