Added Number Left Right.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>Signals</h1>
 
-<a href="/signals/TextEditor/index.html">TextEditor</a>
+<a href="/signals/TextEditor/index.html">Text Editor</a>
+<a href="/signals/NumbersLeftRight/index.html">Numbers Left Right</a>
