--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 
 <a href="/signals/TextEditor/index.html">Text Editor</a>
 <a href="/signals/NumbersLeftRight/index.html">Numbers Left Right</a>
+<a href="/signals/LexicographicallySmaller/index.html">Lexicographically Smaller</a>
