--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<h1>Signals</h1>
+<html lang="en">
+    <h1>Signals</h1>
 
-<a href="/signals/TextEditor/index.html">Text Editor</a></br >
-<a href="/signals/NumbersLeftRight/index.html">Numbers Left Right</a></br >
-<a href="/signals/LexicographicallySmaller/index.html">Lexicographically Smaller</a></br >
-<a href="/signals/WordsArray/index.html">WordsArray</a></br >
-<a href="/signals/SubArrayFrequencies/index.html">SubArrayFrequencies</a></br >
+    <a href="/signals/TextEditor/index.html">Text Editor</a></br >
+    <a href="/signals/NumbersLeftRight/index.html">Numbers Left Right</a></br >
+    <a href="/signals/LexicographicallySmaller/index.html">Lexicographically Smaller</a></br >
+    <a href="/signals/WordsArray/index.html">WordsArray</a></br >
+    <a href="/signals/SubArrayFrequencies/index.html">SubArrayFrequencies</a></br >
+</html>
