--- a/signals/SubArrayFrequencies/index.html
+++ b/signals/SubArrayFrequencies/index.html
@@ -1,4 +1,4 @@
-<h2>Lexicographically Smaller</h2>
+<h2>SubArray Frequencies</h2>
 <a href="../../index.html"><p style="text-align:right">Back to Index</p></a>
 <h3>Log:</h3>
 <div id="log"></div>
