added jasmine tests

--- a/signals/WordsArray/index.html
+++ b/signals/WordsArray/index.html
@@ -1,3 +1,11 @@
+<head>
+<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/jasmine/jasmine/main/lib/jasmine-core/jasmine.css">
+
+<script type="text/javascript" src="https://raw.githubusercontent.com/jasmine/jasmine/main/lib/jasmine-core/jasmine.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/jasmine/jasmine/main/lib/jasmine-core/jasmine-html.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/jasmine/jasmine/main/lib/jasmine-core/boot0.js"></script>
+</head>
+
 <h2>Words Array</h2>
 <a href="../../index.html"><p style="text-align:right">Back to Index</p></a>
 <h3>Log:</h3>
