--- a/signals/WordsArray/index.html
+++ b/signals/WordsArray/index.html
@@ -12,6 +12,8 @@
 <div id="log"></div>
 <script type="text/javascript" src="../../scripts/logger.js"></script>
 <script type="text/javascript" src="code.js"></script>
+<script type="text/javascript" src="tests.js"></script>
+
 
 <h3>Problem:</h3>
 <div class="markdown -arial"><p>You are given an array of strings <code>arr</code>. Your task is to construct a string from the words in <code>arr</code>, starting with the <code>0<sup>th</sup></code> character from each word (in the order they appear in <code>arr</code>), followed by the <code>1<sup>st</sup></code> character, then the <code>2<sup>nd</sup></code> character, etc. If one of the words doesn't have an <code>i<sup>th</sup></code> character, skip that word.</p>
