--- a/signals/WordsArray/index.html
+++ b/signals/WordsArray/index.html
@@ -4,6 +4,7 @@
 <script type="text/javascript" src="https://raw.githubusercontent.com/jasmine/jasmine/main/lib/jasmine-core/jasmine.js"></script>
 <script type="text/javascript" src="https://raw.githubusercontent.com/jasmine/jasmine/main/lib/jasmine-core/jasmine-html.js"></script>
 <script type="text/javascript" src="https://raw.githubusercontent.com/jasmine/jasmine/main/lib/jasmine-core/boot0.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/jasmine/jasmine/main/lib/jasmine-core/boot1.js"></script>
 </head>
 
 <h2>Words Array</h2>
