--- a/signals/WordsArray/index.html
+++ b/signals/WordsArray/index.html
@@ -1,10 +1,10 @@
 <head>
-<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/jasmine/jasmine/main/lib/jasmine-core/jasmine.css">
+<link rel="stylesheet" type="text/css" href="../../scripts/jasmine/jasmine.css">
 
-<script type="text/javascript" src="https://raw.githubusercontent.com/jasmine/jasmine/main/lib/jasmine-core/jasmine.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/jasmine/jasmine/main/lib/jasmine-core/jasmine-html.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/jasmine/jasmine/main/lib/jasmine-core/boot0.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/jasmine/jasmine/main/lib/jasmine-core/boot1.js"></script>
+<script type="text/javascript" src="../../scripts/jasmine/jasmine.js"></script>
+<script type="text/javascript" src="../../scripts/jasmine/jasmine-html.js"></script>
+<script type="text/javascript" src="../../scripts/jasmine/boot0.js"></script>
+<script type="text/javascript" src="../../scripts/jasmine/boot1.js"></script>
 </head>
 
 <h2>Words Array</h2>
