--- a/signals/SubArrayFrequencies/index.html
+++ b/signals/SubArrayFrequencies/index.html
@@ -1,11 +1,24 @@
+<head>
+    <link rel="stylesheet" type="text/css" href="../../scripts/jasmine/jasmine.css">
+    <link rel="stylesheet" type="text/css" href="../../style/signals.css">
+
+    <script type="text/javascript" src="../../scripts/signals.js"></script>
+
+    <script type="text/javascript" src="../../scripts/jasmine/jasmine.js"></script>
+    <script type="text/javascript" src="../../scripts/jasmine/jasmine-html.js"></script>
+    <script type="text/javascript" src="../../scripts/jasmine/boot0.js"></script>
+    <script type="text/javascript" src="../../scripts/jasmine/boot1.js"></script>
+
+    <script type="text/javascript" src="code.js"></script>
+    <script type="text/javascript" src="tests.js"></script>    
+</head>
+
+<body>
 <h2>SubArray Frequencies</h2>
 <a href="../../index.html"><p style="text-align:right">Back to Index</p></a>
-<h3>Log:</h3>
-<div id="log"></div>
-<script type="text/javascript" src="../../scripts/logger.js"></script>
-<script type="text/javascript" src="code.js"></script>
 
-<h3>Problem:</h3>
+<button type="button" class="collapsible">Problem:</button>
+<div class="content">
 <div class="markdown -arial"><p>Given an array of integers <code>arr</code> and a positive integer <code>m</code>, your task is to find the frequency of the most common element within each <a href="keyword://contiguous-subarray" target="_blank">contiguous subarray</a> of length <code>m</code> in <code>arr</code>.</p>
     <p>Return an array of these highest frequencies among subarray elements, ordered by their corresponding subarray's starting index. You can look at the examples section for a better understanding.</p>
     <p><span class="markdown--header" style="color:#2b3b52;font-size:1.4em">Example</span></p>
@@ -86,3 +99,5 @@
         <li><code>[2, 7]</code> is <strong>not</strong> a contiguous subarray because the elements aren't adjacent in <code>arr</code></li>
         </ul>
         </div></div></div></div></div>
+    </body>
+</div>
