--- a/index.html
+++ b/index.html
@@ -6,4 +6,6 @@
     <a href="/signals/LexicographicallySmaller/index.html">Lexicographically Smaller</a></br >
     <a href="/signals/WordsArray/index.html">WordsArray</a></br >
     <a href="/signals/SubArrayFrequencies/index.html">SubArrayFrequencies</a></br >
-</html>
+    <a href="/signals/Meals/index.html">TODO Meals</a></br >
+
+    </html>
