--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html lang="en">
-    <h1>Signals</h1>
+<h1>Signals</h1>
 
-    <a href="/signals/TextEditor/index.html">Text Editor</a></br >
-    <a href="/signals/NumbersLeftRight/index.html">Numbers Left Right</a></br >
-    <a href="/signals/LexicographicallySmaller/index.html">Lexicographically Smaller</a></br >
-    <a href="/signals/WordsArray/index.html">WordsArray</a></br >
-    <a href="/signals/SubArrayFrequencies/index.html">SubArrayFrequencies</a></br >
-    <a href="/signals/Meals/index.html">TODO Meals</a></br >
+<a href="/signals/TextEditor/index.html">Text Editor</a></br>
+<a href="/signals/NumbersLeftRight/index.html">Numbers Left Right</a></br>
+<a href="/signals/LexicographicallySmaller/index.html">Lexicographically Smaller</a></br>
+<a href="/signals/WordsArray/index.html">WordsArray</a></br>
+<a href="/signals/SubArrayFrequencies/index.html">SubArrayFrequencies</a></br>
+<a href="/signals/Meals/index.html">Meals</a></br>
+<a href="/signals/Minesweeper/index.html">TODO Minesweeper</a></br>
 
-    </html>
+</html>
