--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <a href="/signals/SubArrayFrequencies/index.html">SubArrayFrequencies</a></br>
 <a href="/signals/Meals/index.html">Meals</a></br>
 <a href="/signals/Minesweeper/index.html">TODO Minesweeper</a></br>
+<a href="/signals/Programming/index.html">TODO Programming</a></br>
 
 </html>
