--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <a href="/signals/WordsArray/index.html">WordsArray</a></br>
 <a href="/signals/SubArrayFrequencies/index.html">SubArrayFrequencies</a></br>
 <a href="/signals/Meals/index.html">Meals</a></br>
+<a href="/signals/Programming/index.html">Programming</a></br>
+
 <a href="/signals/Minesweeper/index.html">TODO Minesweeper</a></br>
-<a href="/signals/Programming/index.html">TODO Programming</a></br>
 
 </html>
