--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <a href="/signals/SubArrayFrequencies/index.html">SubArrayFrequencies</a></br>
 <a href="/signals/Meals/index.html">Meals</a></br>
 <a href="/signals/Programming/index.html">Programming</a></br>
-
-<a href="/signals/Minesweeper/index.html">TODO Minesweeper</a></br>
+<a href="/signals/Minesweeper/index.html">Minesweeper</a></br>
+<a href="/signals/Matrix45/index.html">TODO Matrix45</a></br>
 
 </html>
