--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <a href="/signals/Programming/index.html">Programming</a></br>
 <a href="/signals/Minesweeper/index.html">Minesweeper</a></br>
 <a href="/signals/Matrix45/index.html">TODO Matrix45</a></br>
+<a href="/signals/Combinations/index.html">TODO Combinations</a></br>
 
 </html>
