--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html lang="en">
 <h1>Signals</h1>
 
+<a href="/signals/3D2/index.html">3D2</a></br>
+
 <a href="/signals/TextEditor/index.html">Text Editor</a></br>
 <a href="/signals/NumbersLeftRight/index.html">Numbers Left Right</a></br>
 <a href="/signals/LexicographicallySmaller/index.html">Lexicographically Smaller</a></br>
