--- a/signals/3D2/Index.html
+++ b/signals/3D2/Index.html
@@ -18,6 +18,7 @@
     </a>
 
     <div class="content">
+        <canvas id="canvas" width="500" height="500"></canvas>
     </div>
 
     <script type="text/javascript" src="../../scripts/signals.js"></script>
