--- a/signals/3D2/index.html
+++ b/signals/3D2/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="tests.js"></script>
 </head>
 
-<body>
+<body onload="setupCanvas()">
     <h2>3D 2</h2>
     <a href="../../index.html">
         <p style="text-align:right">Back to Index</p>
