--- a/signals/3D2/index.html
+++ b/signals/3D2/index.html
@@ -18,7 +18,7 @@
     </a>
 
     <div class="content">
-        <canvas id="canvas" width="500" height="500"></canvas>
+        <canvas id="canvas" width="500" height="500" style="border:1px solid #000000;"></canvas>
     </div>
 
     <script type="text/javascript" src="../../scripts/signals.js"></script>
