style="border:1px solid #000000;width: 1500px;height: 1500px;"

--- a/signals/3D2/index.html
+++ b/signals/3D2/index.html
@@ -17,8 +17,8 @@
         <p style="text-align:right">Back to Index</p>
     </a>
 
-    <div class="content">
-        <canvas id="thecanvas" width="500" height="500" style="border:1px solid #000000;">Your browser does not support the HTML canvas tag.</canvas>
+    <div class="content" style="width: 500px;height: 500px;">
+        <canvas id="thecanvas" style="border:1px solid #000000;width: 500px;height: 500px;">Your browser does not support the HTML canvas tag.</canvas>
     </div>
 
     <script type="text/javascript" src="../../scripts/signals.js"></script>
