added content for conformance

--- a/signals/3D2/index.html
+++ b/signals/3D2/index.html
@@ -19,5 +19,7 @@
 
     <canvas id="thecanvas" style="border:1px solid #000000;width: 500px;height: 500px;">Your browser does not support the HTML canvas tag.</canvas>
 
+    <div class="content" />
+
     <script type="text/javascript" src="../../scripts/signals.js"></script>
 </body>
