--- a/signals/birdie/index.html
+++ b/signals/birdie/index.html
@@ -7,6 +7,8 @@
     <script type="text/javascript" src="../../scripts/jasmine/boot0.js"></script>
     <script type="text/javascript" src="../../scripts/jasmine/boot1.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.22.0/dist/phaser.min.js"></script>
+
     <script type="text/javascript" src="code.js"></script>
     <script type="text/javascript" src="tests.js"></script>
 </head>
