--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html lang="en">
 <h1>Signals</h1>
 
+<a href="/signals/birdie/index.html">birdie</a></br>
+
 <a href="/signals/3D2/index.html">3D2</a></br>
 
 <a href="/signals/TextEditor/index.html">Text Editor</a></br>
