--- a/signals/birdie/index.html
+++ b/signals/birdie/index.html
@@ -18,7 +18,9 @@
     <a href="../../index.html">
         <p style="text-align:right">Back to Index</p>
     </a>
-
+    
+    <div id="gameDiv"></div>
+    
     <div class="content" />
 
     <script type="text/javascript" src="../../scripts/signals.js"></script>
