--- a/signals/birdie/index.html
+++ b/signals/birdie/index.html
@@ -22,6 +22,6 @@
     <div id="gameDiv"></div>
     
     <div class="content" />
-
+<img src="assets/bird.png" />
     <script type="text/javascript" src="../../scripts/signals.js"></script>
 </body>
