--- a/signals/birdie/index.html
+++ b/signals/birdie/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="tests.js"></script>
 </head>
 
-<body onload="setupCanvas()">
+<body onload="">
     <h2>Birdie</h2>
     <a href="../../index.html">
         <p style="text-align:right">Back to Index</p>
