--- a/signals/birdie/index.html
+++ b/signals/birdie/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="tests.js"></script>
 </head>
 
-<body onload="">
+<body onload="setupGame()">
     <h2>Birdie<img src="assets/bird.png" width="40"/></h2>
     <a href="../../index.html">
         <p style="text-align:right">Back to Index</p>
