--- a/signals/birdie/index.html
+++ b/signals/birdie/index.html
@@ -7,20 +7,20 @@
     <script type="text/javascript" src="../../scripts/jasmine/boot0.js"></script>
     <script type="text/javascript" src="../../scripts/jasmine/boot1.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.22.0/dist/phaser.min.js"></script>
+    <script src="libraries/phaser.js"></script>
 
     <script type="text/javascript" src="code.js"></script>
     <script type="text/javascript" src="tests.js"></script>
 </head>
 
 <body onload="setupGame()">
-    <h2>Birdie<img src="assets/bird.png" width="40"/></h2>
+    <h2>Birdie<img src="assets/bird.png" width="40" /></h2>
     <a href="../../index.html">
         <p style="text-align:right">Back to Index</p>
     </a>
-    
+
     <div id="gameDiv"></div>
-    
+
     <div class="content" />
 
     <script type="text/javascript" src="../../scripts/signals.js"></script>
