--- a/signals/birdie/index.html
+++ b/signals/birdie/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="../../scripts/jasmine/boot0.js"></script>
     <script type="text/javascript" src="../../scripts/jasmine/boot1.js"></script>
 
-    <script src="libraries/phaser.js"></script>
+    <script type="text/javascript" src="libraries/phaser.js"></script>
 
     <script type="text/javascript" src="code.js"></script>
     <script type="text/javascript" src="tests.js"></script>
