--- a/signals/webrtc/offering.html
+++ b/signals/webrtc/offering.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body>
+<body onload="clickcreateoffer()">
 
     <h1>webrtc without signaling server demo.</h1>
 
