--- a/signals/webrtc/offering.html
+++ b/signals/webrtc/offering.html
@@ -7,6 +7,8 @@
     <title>offering webrtc without signaling server demo</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+    <script src="libraries/pako.js"></script>
 </head>
 
 <body onload="clickcreateoffer()">
