--- a/signals/webrtc/offering.html
+++ b/signals/webrtc/offering.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-    <script src="libraries/pako_deflate.min.js"></script>
+    <script src="libraries/pako.min.js"></script>
 </head>
 
 <body onload="clickcreateoffer()">
