--- a/signals/pong/index.html
+++ b/signals/pong/index.html
@@ -11,7 +11,7 @@
 
     <!-- Load the Phaser library and your game code -->
     <script src="libraries/phaser.js"></script>
-    <script src="game.js"></script>
+    <script src="game2.js"></script>
 </body>
 
 </html>
